--- a/index.html
+++ b/index.html
@@ -1,79 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello MAX Mini App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      line-height: 1.6;
-    }
-    h2 {
-      margin-bottom: 1rem;
-    }
-    .block {
-      margin-bottom: 1rem;
-      padding: 0.75rem;
-      background: #f3f3f3;
-      border-radius: 6px;
-    }
-  </style>
-</head>
-<body>
-
-  <h2>Информация о запуске</h2>
-
-  <div class="block" id="bot"></div>
-  <div class="block" id="user"></div>
-  <div class="block" id="phone"></div>
-
-  <!-- подключение MAX SDK -->
-  <script src="https://st.max.ru/js/max-web-app.js"></script>
-  <script>
-    // init data
-    const init = WebApp.initDataUnsafe || {};
-
-    // BOT
-    const botId = init.query?.bot;
-    document.getElementById("bot").innerHTML = `
-      <b>Бот:</b> ${botId || "данные отсутствуют"}
-    `;
-
-    // USER
-    const user = init.user;
-    if (user) {
-      document.getElementById("user").innerHTML = `
-        <b>Пользователь:</b><br>
-        ID: ${user.id}<br>
-        Имя: ${user.first_name || "-"}
-      `;
-    } else {
-      document.getElementById("user").innerHTML = `
-        <b>Пользователь:</b> данные отсутствуют
-      `;
-    }
-
-    // PHONE
-    const phoneBlock = document.getElementById("phone");
-    if (user?.phone) {
-      phoneBlock.innerHTML = `<b>Телефон:</b> ${user.phone}`;
-    } else {
-      phoneBlock.innerHTML = `<b>Телефон:</b> запрашиваю...`;
-
-      WebApp.requestContact()
-        .then(res => {
-          phoneBlock.innerHTML = `<b>Телефон:</b> ${res.phone}`;
-        })
-        .catch(() => {
-          phoneBlock.innerHTML = `<b>Телефон:</b> пользователь отказал или доступ запрещён`;
-        });
-    }
-
-    // debug info (можешь посмотреть в консоли)
-    console.log("WebApp.initDataUnsafe:", init);
-  </script>
-
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/static/favicon.ico><title>probonus_bot_front</title><link rel=stylesheet href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900"><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css><link href=/static/css/chunk-0235f291.eb235811.css rel=prefetch><link href=/static/js/chunk-0235f291.7b9c515a.js rel=prefetch><link href=/static/js/chunk-2d0e6ca2.8712fa74.js rel=prefetch><link href=/static/js/chunk-2d21abe6.df6ad9e0.js rel=prefetch><link href=/static/css/app.03a59580.css rel=preload as=style><link href=/static/css/chunk-vendors.83f1f50f.css rel=preload as=style><link href=/static/js/app.3ae997dd.js rel=preload as=script><link href=/static/js/chunk-vendors.7d0194f1.js rel=preload as=script><link href=/static/css/chunk-vendors.83f1f50f.css rel=stylesheet><link href=/static/css/app.03a59580.css rel=stylesheet></head><body><noscript><strong>We're sorry but probonus_bot_front doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/static/js/chunk-vendors.7d0194f1.js></script><script src=/static/js/app.3ae997dd.js></script></body></html>
