--- a/index.html
+++ b/index.html
@@ -1,79 +1,1 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hello MAX Mini App</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 2rem;
-      line-height: 1.6;
-    }
-    h2 {
-      margin-bottom: 1rem;
-    }
-    .block {
-      margin-bottom: 1rem;
-      padding: 0.75rem;
-      background: #f3f3f3;
-      border-radius: 6px;
-    }
-  </style>
-</head>
-<body>
-
-  <h2>Информация о запуске</h2>
-
-  <div class="block" id="bot"></div>
-  <div class="block" id="user"></div>
-  <div class="block" id="phone"></div>
-
-  <!-- подключение MAX SDK -->
-  <script src="https://st.max.ru/js/max-web-app.js"></script>
-  <script>
-    // init data
-    const init = WebApp.initDataUnsafe || {};
-
-    // BOT
-    const botId = init.query?.bot;
-    document.getElementById("bot").innerHTML = `
-      <b>Бот:</b> ${botId || "данные отсутствуют"}
-    `;
-
-    // USER
-    const user = init.user;
-    if (user) {
-      document.getElementById("user").innerHTML = `
-        <b>Пользователь:</b><br>
-        ID: ${user.id}<br>
-        Имя: ${user.first_name || "-"}
-      `;
-    } else {
-      document.getElementById("user").innerHTML = `
-        <b>Пользователь:</b> данные отсутствуют
-      `;
-    }
-
-    // PHONE
-    const phoneBlock = document.getElementById("phone");
-    if (user?.phone) {
-      phoneBlock.innerHTML = `<b>Телефон:</b> ${user.phone}`;
-    } else {
-      phoneBlock.innerHTML = `<b>Телефон:</b> запрашиваю...`;
-
-      WebApp.requestContact()
-        .then(res => {
-          phoneBlock.innerHTML = `<b>Телефон:</b> ${res.phone}`;
-        })
-        .catch(() => {
-          phoneBlock.innerHTML = `<b>Телефон:</b> пользователь отказал или доступ запрещён`;
-        });
-    }
-
-    // debug info (можешь посмотреть в консоли)
-    console.log("WebApp.initDataUnsafe:", init);
-  </script>
-
-</body>
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta http-equiv="Content-Language" content="ru"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>max_pb_bot</title><script defer="defer" src="/js/chunk-vendors.b84b3828.js"></script><script defer="defer" src="/js/app.efcde38a.js"></script><link href="/css/chunk-vendors.38c56e9d.css" rel="stylesheet"><link href="/css/app.41288459.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but max_pb_bot doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="https://st.max.ru/js/max-web-app.js"></script></body></html>
